# syncroboverb

./: .clang-format  CMakeLists.txt  README.md  generate_resources.py
src/: aboutbox.cpp  buildinfo.h.in  editor.cpp  editor.hpp  juce.hpp  pluginview.cpp  pluginview.hpp  processor.cpp  processor.hpp  res.hpp  roboverb.cpp  roboverb.hpp  spherescope.hpp  syncroboverb.cpp  syncroboverb.hpp
src/ui/: aboutbox.cpp  aboutbox.hpp  pluginview.cpp  pluginview.hpp  spherescope.hpp
